--- a/Autoencoder_Movie_Recommender.ipynb
+++ b/Autoencoder_Movie_Recommender.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "LwHPiMxXgrzX"
       },
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "ng1PiosHj208"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
         "id": "9Y3U0k_jkHa1",
         "outputId": "b4a851ab-755d-4dfe-d498-856975e7401f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
       "metadata": {
         "id": "nyoZvZqGkQgI"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -271,7 +271,7 @@
         "id": "U4cP5EUokXGf",
         "outputId": "4ce55a1b-ff1d-4db2-e4a2-6bfd29c03d12"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +311,7 @@
         "id": "qI44E4LSkcVo",
         "outputId": "b3970f34-0162-406f-cd7a-cfc92d4c391e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +359,7 @@
         },
         "outputId": "f7f5fc72-c27b-4d98-dea5-b9570ab52eb6"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -429,7 +429,7 @@
       "metadata": {
         "id": "gTtNeWMhmA4s"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -453,7 +453,7 @@
         "id": "4rsh2Y_kZYBc",
         "outputId": "1c847a9d-399c-4ae4-cd90-40b1667945d0"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +544,7 @@
       "metadata": {
         "id": "diNgP--h9RlS"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -568,7 +568,7 @@
         "id": "3Z2ySvqJZ0zu",
         "outputId": "52ff437d-4a0c-4c26-bd38-a77b94f044eb"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +679,7 @@
         },
         "outputId": "06498015-1cce-4dee-e2c2-7c6470075f01"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,7 +719,7 @@
         },
         "outputId": "aea6550a-cb5d-4ce1-b570-a8d0faf2cfdf"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,7 +762,7 @@
         },
         "outputId": "23b25332-759d-4916-cbae-21e42bde5319"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,7 +806,7 @@
         "id": "sgSxUQUN3XgK",
         "outputId": "51aeabb9-edbc-4c04-c7b9-570b65dce4f4"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -855,7 +855,7 @@
         "<h1>Experiment 5</h1>\n",
         "\n",
         "\n",
-        "<p>To improve our results farther, we added a custom<code>Sampling</code> layer in our model. We removed the first hidden <code>Dense</code> layer with 100 units (using both layers was causing <b>mode collapse</b>) and only kept the second <code>Dense</code> with 50 units,  using the <code>relu</code> activation function.  We compiled the model using the <code>BinaryCrossentropy</code> loss function and the <code>Adam</code> optimizer with a learning rate of 0.001.</p>"
+        "<p>To improve our results farther, we added a custom<code>Sampling</code> layer in our model. After encoding our inputs in the <code>Embedding</code> layers, we invoke the <code>Sampling</code> layer. We removed the first hidden <code>Dense</code> layer with 100 units (using both layers was causing <b>mode collapse</b>) and only kept the second <code>Dense</code> with 50 units,  using the <code>relu</code> activation function.  We compiled the model using the <code>BinaryCrossentropy</code> loss function and the <code>Adam</code> optimizer with a learning rate of 0.001.</p>"
       ],
       "metadata": {
         "id": "ce_TCYHcder9"
@@ -937,7 +937,7 @@
         "id": "H7L0dRBudNdr",
         "outputId": "f5e1715c-e611-4423-aab4-815007070bb6"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -968,7 +968,7 @@
         "id": "qRhsDojrdVFD",
         "outputId": "41a58abe-bc9b-4c2b-efca-79899e04e14c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1000,7 @@
         "id": "XAOSQCR5darC",
         "outputId": "0d081a65-0ad8-44e4-8e67-c14d2cf9ca15"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1044,7 +1044,7 @@
         "id": "FDNGQk31dnC0",
         "outputId": "e6c41beb-cb4a-4729-ba7d-667ebd8d8554"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1081,7 +1081,7 @@
       "source": [
         "The top 5 recommendations will usually have one of the movies Tim really likes that he purposefully neglected to add/rate. (These correctly recommended movies include shawshank redemption, pulp fiction, godfather, starwars, clockwork orange)\n",
         "\n",
-        "Tim hasn't seen most of the other recommendations though, but judging by their imdb pages and movie category, these are good recommendations.\n",
+        "Tim hasn't seen most of the other recommendations though, but judging by their IMDB pages and movie category, these are good recommendations.\n",
         "\n",
         "Overall, this model is outperforming the previous model.  The quality of these recommendations is on par with the original model's recommendations.\n"
       ],
